homepage overflow correction

--- a/style.css
+++ b/style.css
@@ -10,8 +10,10 @@ body, html{
 	scroll-behavior: smooth;
 }
 body{
-	overflow-x: hidden;
 	background-color: #c1f2f2;
+}
+#main-ctn{
+	overflow: hidden;
 }
 p,h1,h2,h3,h4,h5,h6,ul,li,a,strong {
 	font-family: 'Barlow';
@@ -22,12 +24,6 @@ p,h1,h2,h3,h4,h5,h6,a{
 	margin: 0;
 	padding: 0;
 }
-h1{
-	
-}
-h2{
-	
-}
 h3{
 	font-size: 22px;
 	font-weight: 600;
@@ -35,12 +31,6 @@ h3{
 h4{
 	font-size: 18px;
 	font-weight: 600;
-}
-h5{
-	
-}
-h6{
-	
 }
 p {
 	font-size: 18px;
